--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Slideshow with Music</title>
+  <title>3 Park Street Property Overview</title>
 </head>
 <body style="text-align:center; padding-top: 50px;">
 
